Arreglos views filtros

--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -22,74 +22,81 @@
                         <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
                     <% elsif @tipo_lista.to_i == 2 %>
                         <h3 class = "title is-4 has-text-white" >Confirmados</h3>
-                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1, :filtro => 0) %></h3>
                         <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
                     <% elsif @tipo_lista.to_i == 3 %>
                         <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
-                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1, :filtro => 0) %></h3>
                         <h3 class = "title is-4 has-text-white" >Completados</h3>
                     <% else %>
                         <h3 class = "title is-4" ><%= link_to "Confirmados", turnos_index_path(:tipo => 1, :tipo_lista => 2) %></h3>
-                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+                        <h3 class = "title is-4" ><%= link_to "Activos", turnos_index_path(:tipo => 1, :tipo_lista => 1, :filtro => 0) %></h3>
                         <h3 class = "title is-4" ><%= link_to "Completados", turnos_index_path(:tipo => 1, :tipo_lista => 3) %></h3>
                     <% end %>
                 </div>
             </div>
             <% if @tipo_lista.to_i == 1 %>
-                <div class="column">
-                    <div align='left' style="display: flex; flex-flow: wrap; ">
-                        <h3 class = "title is-4 has-text-dark" >Filtros</h3>
+                <br/>
+                <div class="row_second">
+                    <div class="column_head_turno">
+                        <% if @filtrar.to_i == 1 %>
+                            <h3 class = "title is-4 has-text-white" ><%= link_to "Filtrar", turnos_index_path(:tipo => 1, :tipo_lista => 1, :filtro => 0), class: "has-text-white" %></h3>
+                        <% else %>
+                            <h3 class = "title is-4 has-text-dark" ><%= link_to "Filtrar", turnos_index_path(:tipo => 1, :tipo_lista => 1, :filtro => 1) %></h3>
+                        <% end %>
                     </div>
                 </div>
-                <%= form_for(@turno, as: :turno, url:turnos_index_path, :html => { :method => 'GET' }) do |form| %>
-                    <%= form.hidden_field :tipo, value: 1 %>
-                    <%= form.hidden_field :tipo_lista, value: 1 %>
-                    <div>
-                        <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección salida"%>
-                    </div>
-                    </br>
-                    <div>
-                        <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección llegada"%>
-                    </div>
-                    <% def options_for_status
-                        [
-                        ['Día de la semana',nil],
-                        ['Lunes','Lunes'],
-                        ['Martes','Martes'],
-                        ['Miércoles','Miércoles'],
-                        ['Jueves','Jueves'],
-                        ['Viernes','Viernes'],
-                        ['Sábado','Sábado'],
-                        ['Domingo','Domingo']
-                        ]
-                    end %>
-                    <div>
-                        <%= form.select :dia_semana, options_for_status, {}, prompt: 'Día', 
-                        value: params[:dia_semana] %>
-                    </div>
+                <% if @filtrar.to_i == 1 %>
                     <br/>
-                    <div class="column">
-                        <div align='left' style="display: flex; flex-flow: wrap; ">
-                            <b>Hora de salida mínima</b>
-                        </div>
-                    </div>
-                    <div class="select">
-                        <%= form.time_select :hora_salida_min, default: {hour: 0, min: 1}, time_separator: '</div><div class="select">' %>
-                    </div>
-                    <br/>
-                    <br/>
-                    <div class="column">
-                        <div align='left' style="display: flex; flex-flow: wrap; ">
-                            <b>Hora de salida máxima</b>
-                        </div>
-                    </div>
-                    <div class="select">
-                        <%= form.time_select :hora_salida_max, default: {hour: 23, min: 59}, time_separator: '</div><div class="select">' %>
-                    </div>
-                    <br/>
-                    <br/>
-                    <div>
-                        <%= form.submit 'Filtrar', class: "button is-primary is-rounded is-outlined is-right" %>
+                    <div class="column is-4 is-offset-4" align="center">
+                        <%= form_for(@turno, as: :turno, url:turnos_index_path, :html => { :method => 'GET' }) do |form| %>
+                            <%= form.hidden_field :tipo, value: 1 %>
+                            <%= form.hidden_field :tipo_lista, value: 1 %>
+                            <div>
+                                <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección salida"%>
+                            </div>
+                            <br/>
+                            <div>
+                                <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección llegada"%>
+                            </div>
+                            <% def options_for_status
+                                [
+                                ['Día de la semana',nil],
+                                ['Lunes','Lunes'],
+                                ['Martes','Martes'],
+                                ['Miércoles','Miércoles'],
+                                ['Jueves','Jueves'],
+                                ['Viernes','Viernes'],
+                                ['Sábado','Sábado'],
+                                ['Domingo','Domingo']
+                                ]
+                            end %>
+                            <div>
+                                <%= form.select :dia_semana, options_for_status, {}, prompt: 'Día', 
+                                value: params[:dia_semana] %>
+                            </div>
+                            <br/>
+                            <div class="column">
+                                <b>Hora de salida mínima</b>
+                            </div>
+                            <div class="select">
+                                <%= form.time_select :hora_salida_min, default: {hour: 0, min: 1}, time_separator: '</div><div class="select">' %>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="column">
+                                <b>Hora de salida máxima</b>
+                            </div>
+                            <div class="select">
+                                <%= form.time_select :hora_salida_max, default: {hour: 23, min: 59}, time_separator: '</div><div class="select">' %>
+                            </div>
+                            <br/>
+                            <br/>
+                            <br/>
+                            <div>
+                                <%= form.submit 'Filtrar', class: "button is-primary is-rounded is-outlined is-inverted is-right" %>
+                            </div>
+                        <% end %>
                     </div>
                 <% end %>
                 <div class="row">
