--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -197,6 +197,7 @@ html
   margin: 10px 0;
   padding-bottom: 10px;
   height: 300px;
+  width: 1066px;
 }
 
 .row_inner_request
@@ -207,6 +208,7 @@ html
   margin: 10px 0;
   padding-bottom: 10px;
   height: 200px;
+  width: 1066px;
 }
 
 .tile
