--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <nav class="navbar is-black" role="navigation" aria-label="dropdown navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" style = "position:relative; left:20px; top:0.001px;">
+        <a class="navbar-item" style = "position:relative; left:20px; top:0.001px;" href="https://www.google.com/logos/2010/pacman10-i.html">
           <ion-icon size="large" name="car-sport"></ion-icon>
         </a>
       </div>
