--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -166,6 +166,63 @@
             <% end %>
         </div>
     <% else %>
+        <div class="column">
+            <div align='left' style="display: flex; flex-flow: wrap; ">
+                <h3 class = "title is-4 has-text-dark" >Filtros</h3>
+            </div>
+        </div>
+        <%= form_for(@turno, as: :turno, url:turnos_index_path, :html => { :method => 'GET' }) do |form| %>
+            <%= form.hidden_field :tipo, value: 1 %>
+            <%= form.hidden_field :tipo_lista, value: 1 %>
+            <div>
+                <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección salida"%>
+            </div>
+            </br>
+            <div>
+                <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección llegada"%>
+            </div>
+            <% def options_for_status
+                [
+                ['Día de la semana',nil],
+                ['Lunes','Lunes'],
+                ['Martes','Martes'],
+                ['Miércoles','Miércoles'],
+                ['Jueves','Jueves'],
+                ['Viernes','Viernes'],
+                ['Sábado','Sábado'],
+                ['Domingo','Domingo']
+                ]
+            end %>
+            <div>
+                <%= form.select :dia_semana, options_for_status, {}, prompt: 'Día', 
+                value: params[:dia_semana] %>
+            </div>
+            <br/>
+            <div class="column">
+                <div align='left' style="display: flex; flex-flow: wrap; ">
+                    <b>Hora de salida mínima</b>
+                </div>
+            </div>
+            <div class="select">
+                <%= form.time_select :hora_salida_min, default: {hour: 0, min: 1}, time_separator: '</div><div class="select">' %>
+            </div>
+            <br/>
+            <br/>
+            <div class="column">
+                <div align='left' style="display: flex; flex-flow: wrap; ">
+                    <b>Hora de salida máxima</b>
+                </div>
+            </div>
+            <div class="select">
+                <%= form.time_select :hora_salida_max, default: {hour: 23, min: 59}, time_separator: '</div><div class="select">' %>
+            </div>
+            <br/>
+            <br/>
+            <div>
+                <%= form.submit 'Filtrar', class: "button is-primary is-rounded is-outlined is-right" %>
+            </div>
+        <% end %>
+
         <div class="row">
             <div class="row">
                 <div class="row_inner">
@@ -189,6 +246,7 @@
             </div>
         </div>
     <% end %>
+    
 <% else %>
 
     <h1 align='center' class = "title is-2 has-text-primary" >Turnos</h1>
