--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -12,86 +12,114 @@
                     <br/>
                 </div>
             <% end %>
-            <div>
-                <h1 class = "title is-6 has-text-dark">Cantidad asientos</h1>
-                <%= form.text_field :cantidad_asientos, class: "input is-primary is-rounded is-outlined", placeholder:"Cantidad asientos"%>
-            </div>
-            
-            <br/>
-            
-            <div class="field-group">
-                <h1 align='center' class = "title is-6 has-text-black" >Hora de salida</h1>
-                <div class="field is-inline-block-desktop">
-                    <div class="select">
-                        <%= form.time_select :hora_salida, time_separator: '</div><div class="select">' %>
-                    </div>
-                </div>
-            </div>
-            <br/>
-            <br/>
-            <% def options_for_status
-            [
-            ['Lunes','Lunes'],
-            ['Martes','Martes'],
-            ['Miércoles','Miércoles'],
-            ['Jueves','Jueves'],
-            ['Viernes','Viernes'],
-            ['Sábado','Sábado'],
-            ['Domingo','Domingo']
-            ]
-            end %>
-            <div>
-                <h4 align='center' class = "title is-6 has-text-black" >Día de la semana</h4>
-                <%= form.select :dia_semana, options_for_status, {}, prompt: 'Select One' %>
-            </div>
-            <br/>
-            <% def options_for_status
-            [
-            ['Ida','Ida'],
-            ['Vuelta','Vuelta']
-            ]
-            end %>
-            <div>
-            <label class="label">Tipo</label>
-            <%= form.select :tipo, options_for_status, {}, prompt: 'Select One' %>
-            </div>
-            <br/>
-            <div>
-                <h4 class = "title is-6 has-text-dark">Dirección de salida</h4>
-                <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de salida"%>
-            </div>
-            <br/>
-            <div>
-                <h4 class = "title is-6 has-text-dark">Dirección de llegada</h4>
-                <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de llegada"%>
-            </div>
-            <br/>
-            <% def options_for_status
-            [
-            ['Espacio extra para objetos',nil],
-            ['Solo mochilas','Solo mochilas'],
-            ['Proyecto de tamaño mediano','Proyecto de tamaño mediano'],
-            ['Maqueta grande','Maqueta grande']
-            ]
-            end %>
-            <div>
-            <%= form.select :espacio, options_for_status, {}, prompt: 'Espacio' %>
-            </div>
-            <br/>
-            <%if @turno.user_id == current_user.id%>
+            <% if @turno.estado == "ACTIVO" %>
                 <% def options_for_status
                     [
-                    ['Turno completado','COMPLETADO'],
-                    ['Turno confirmado','CONFIRMADO'],
-                    ['Turno pendiente','ACTIVO'],
+                    ['0','0'],
+                    ['1','1'],
+                    ['2','2'],
+                    ['3','3'],
+                    ['4','4'],
+                    ['5','5'],
+                    ['6','6'],
+                    ['7','7']
                     ]
                 end %>
                 <div>
-                    <h4 class = "title is-6 has-text-dark">Estado turno</h4>
-                    <%= form.select :estado, options_for_status, {}, prompt: 'Select One', class: "select" %>
+                    <h4 align='center' class = "title is-6 has-text-black" >Cantidad asientos</h4>
+                    <%= form.select :cantidad_asientos, options_for_status, {}, prompt: 'Select One' %>
                 </div>
+                
+                <br/>
+                
+                <div class="field-group">
+                    <h1 align='center' class = "title is-6 has-text-black" >Hora de salida</h1>
+                    <div class="field is-inline-block-desktop">
+                        <div class="select">
+                            <%= form.time_select :hora_salida, time_separator: '</div><div class="select">' %>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+                <% def options_for_status
+                [
+                ['Lunes','Lunes'],
+                ['Martes','Martes'],
+                ['Miércoles','Miércoles'],
+                ['Jueves','Jueves'],
+                ['Viernes','Viernes'],
+                ['Sábado','Sábado'],
+                ['Domingo','Domingo']
+                ]
+                end %>
+                <div>
+                    <h4 align='center' class = "title is-6 has-text-black" >Día de la semana</h4>
+                    <%= form.select :dia_semana, options_for_status, {}, prompt: 'Select One' %>
+                </div>
+                <br/>
+                <% def options_for_status
+                [
+                ['Ida','Ida'],
+                ['Vuelta','Vuelta']
+                ]
+                end %>
+                <div>
+                <label class="label">Tipo</label>
+                <%= form.select :tipo, options_for_status, {}, prompt: 'Select One' %>
+                </div>
+                <br/>
+                <div>
+                    <h4 class = "title is-6 has-text-dark">Dirección de salida</h4>
+                    <%= form.text_field :direccion_salida, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de salida"%>
+                </div>
+                <br/>
+                <div>
+                    <h4 class = "title is-6 has-text-dark">Dirección de llegada</h4>
+                    <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de llegada"%>
+                </div>
+                <br/>
+                <% def options_for_status
+                [
+                ['Espacio extra para objetos',nil],
+                ['Solo mochilas','Solo mochilas'],
+                ['Proyecto de tamaño mediano','Proyecto de tamaño mediano'],
+                ['Maqueta grande','Maqueta grande']
+                ]
+                end %>
+                <div>
+                <%= form.select :espacio, options_for_status, {}, prompt: 'Espacio' %>
+                </div>
+                <br/>
+                <%if @turno.user_id == current_user.id%>
+                    <% def options_for_status
+                        [
+                        ['Turno completado','COMPLETADO'],
+                        ['Turno confirmado','CONFIRMADO'],
+                        ['Turno pendiente','ACTIVO'],
+                        ]
+                    end %>
+                    <div>
+                        <h4 class = "title is-6 has-text-dark">Estado turno</h4>
+                        <%= form.select :estado, options_for_status, {}, prompt: 'Select One', class: "select" %>
+                    </div>
+                <% end %>
+                <br/>
+            <% else %>
+                <%if @turno.user_id == current_user.id%>
+                    <% def options_for_status
+                        [
+                        ['Turno completado','COMPLETADO'],
+                        ['Turno confirmado','CONFIRMADO'],
+                        ]
+                    end %>
+                    <div>
+                        <h4 class = "title is-6 has-text-dark">Estado turno</h4>
+                        <%= form.select :estado, options_for_status, {}, prompt: 'Select One', class: "select" %>
+                    </div>
+                <% end %>
+                <br/>
             <% end %>
-            <br/>
             <div>
                 <%= form.submit 'Guardar', :class => "button is-primary is-rounded is-outlined" %>
             </div>
