--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -57,16 +57,16 @@
             <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), :id => "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
             <%= button_to "Eliminar", turnos_delete_path(:id => @turno.id), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :delete%>
         <% end %>
-        <h3 class = "title is-4" ><%= link_to "Volver", turnos_index_path(:tipo => 2, :tipo_lista => 2) %></h3>
+        <h3 class = "title is-4" ><%= link_to "Volver", turnos_index_path(:tipo => 2, :tipo_lista => 2), :class => "button is-primary is-inverted is-rounded is-outlined" %></h3>
     <% elsif @usuario != 0 %>
-        <% if @turno.estado == 'ACTIVO' and @condicion == TRUE%> 
+        <% if @turno.estado == 'ACTIVO' and @condicion.to_s == "true"%> 
             <%= link_to 'Solicitar', requests_path(:id_viaje => @turno.id),id: "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
-        <% elsif @turno.estado == 'ACTIVO' and @condicion == FALSE %>
+        <% elsif @turno.estado == 'ACTIVO' and @condicion.to_s == "false" %>
             <strong>Has enviado una solicitud a este turno</strong>
         <% elsif @turno.estado == 'COMPLETADO'%>
             <%= link_to 'Agregar reseña ', resenas_path(:id_viaje => @turno.id), class: "button is-primary is-inverted is-rounded is-outlined"%>
         <% end %>
-        <h3 class = "title is-4" ><%= link_to "Volver", turnos_index_path(:tipo => 1, :tipo_lista => 1) %></h3>
+        <h3 class = "title is-4" ><%= link_to "Volver", turnos_index_path(:tipo => 1, :tipo_lista => 1), :class => "button is-primary is-inverted is-rounded is-outlined" %></h3>
     <% end %>
 
     <% if @turno.estado == 'COMPLETADO'%>
