--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -14,17 +14,14 @@
         <% end %>
         <% def options_for_status
             [
+            ['Cantidad asientos',nil],
             ['1','1'],
             ['2','2'],
             ['3','3'],
-            ['4','4'],
-            ['5','5'],
-            ['6','6'],
-            ['7','7']
+            ['4','4']
             ]
           end %>
           <div>
-            <h4 align='center' class = "title is-6 has-text-black" >Cantidad asientos</h4>
             <%= form.select :cantidad_asientos, options_for_status, {}, prompt: 'Select One' %>
           </div>
         <br/>
