--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -48,6 +48,10 @@
         <%= @turno.tipo %>
     </p>
     <p>
+        <strong>Espacio: </strong>
+        <%= @turno.espacio %>
+    </p>
+    <p>
         <strong>Estado: </strong>
         <%= @turno.estado %>
     </p>
